# waverider

./: .gitignore
chomp_msgs/: CMakeLists.txt  package.xml
chomp_ros/: CMakeLists.txt  config_chomp.rviz  package.xml
chomp_ros/app/: chomp_node.cc
chomp_ros/include/chomp_ros/: chomp_interface.h  chomp_optimizer.h  chomp_planner.h
chomp_ros/src/: chomp_interface.cc  chomp_optimizer.cc  chomp_planner.cc
planner_interface_ros/: CMakeLists.txt  package.xml
planner_interface_ros/include/planner_interface_ros/: planner_interface.h
planner_interface_ros/src/: planner_interface.cc
waverider/: CMakeLists.txt
waverider/include/waverider/: parallelized_policy_2d.h  waverider_policy_2d.h
waverider/src/: parallelized_policy_2d.cc  waverider_policy_2d.cc
waverider_chomp_msgs/: CMakeLists.txt  package.xml
waverider_chomp_msgs/action/: FollowPathLocalGuidance.action  PlanToGoalLocalGuidance.action  PlanToGoalPlanner.action  PlanToGoalWaverider.action
waverider_chomp_msgs/msg/: DesiredLinearAccelerationCalculation.msg  DesiredYawVelocityCalculation.msg  EstimatedState.msg  FloatStamped.msg  PlannerType.msg  RobotState.msg
waverider_chomp_msgs/srv/: GetTraj.srv  SetPlannerType.srv
waverider_chomp_planner/: CMakeLists.txt  package.xml
waverider_chomp_planner/config/: chomp_planner_param.yaml  rqt_multiplot.xml  rqt_multiplot_acc_tuning.xml  rqt_multiplot_yaw.xml  waverider_planner_param.yaml
waverider_chomp_planner/include/waverider_chomp_planner/: waverider_chomp_planner.h  waverider_planner.h
waverider_chomp_planner/launch/: waverider_chomp_planner.launch  waverider_planner.launch
waverider_chomp_planner/src/: waverider_chomp_planner.cc  waverider_planner.cc
waverider_ros/: package.xml
waverider_ros/app/: eval_node.cc
waverider_ros/config/: alma_waverider.yaml  waverider_server.rviz
waverider_ros/include/waverider_ros/: waverider_server.h
waverider_ros/launch/: alma_waverider.launch
waverider_ros/src/: waverider_server.cc
