<?xml version="1.0"?>
<package format="2">
  <name>waverider_chomp_msgs</name>
  <version>0.0.0</version>
  <description>msgs for waverider_ros and CHOMP_ros.</description>

  <maintainer email="nospelt@ethz.ch">Nicole Ospelt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
</package>
